Fix: Text color for free text in dark mode

--- a/static/css/query-builder.css
+++ b/static/css/query-builder.css
@@ -551,6 +551,7 @@ textarea.form-control{
     transition: height 0.3s; 
     padding-top: 4px;
     background-color: var(--top-bar-bg-color-regular);
+    color: var(--text-color) !important;
 }
 textarea.form-control:focus{
     box-shadow: none;
