--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5294,6 +5294,22 @@ input.form-control {
     background: var(--ui-widget-bg-color);
 }
 
+.add-con {
+    border: 1px solid var(--border-btn-color);
+    font-size: 16px !important;
+    padding: 0px;
+    padding-bottom: 3px;
+    margin: 0 4px 0 10px;
+    height: 20px;
+    width: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--default-tab);
+    color: var(--text-color);
+}
+
 /* Tippy.js Tooltip  */
 .tippy-box{
     background-color: var(--side-nav-bg-color-regular);
