--- a/static/css/metrics-explorer.css
+++ b/static/css/metrics-explorer.css
@@ -494,3 +494,10 @@ input:checked + .slider:before {
     border-radius: 0 5px 5px 0;
     border: none;
 }
+
+.refresh-btn{
+    height: 30px !important;
+    width: 30px !important;
+    border: 1px solid var(--border-color-regular);
+    margin-right: 10px;
+}
