Refresh Icon On Metrics Explorer (#1104)
Signed-off-by: Sonam Gupta <71771131+sonamgupta21@users.noreply.github.com>

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5082,6 +5082,11 @@ input.form-control {
     background-size: 46% !important;
 }
 
+.refresh-btn:hover{
+    background: var(--top-refresh-btn-bg-img) var(--drop-down-btn-bg-hover) center center no-repeat !important;
+    background-size: 46% !important;
+}
+
 #delbutton.default-dashboard-delete:hover {
     background-image: url(../assets/dark-delete-icon-regular.svg);
 }
