--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -1293,6 +1293,9 @@ input:checked + .slider:before {
 .graph-customization{
   width: 320px;
 }
+#add-widget-options{
+  display: none;
+}
 #add-widget-options .editPanelMenu{
     width: 20%;
     padding: 10px 10px;
@@ -1439,7 +1442,6 @@ input:checked + .slider:before {
 .add-panel-div .plus-icon{
   font-size: 40px;
   color: var(--lavender-2);
-  display: none;
 }
 .add-panel-div .text{
   font-size: 15px;
