Fix : Query Inconsistency on Scrolling Logs (#1149)
* Fix : Query Inconsistency on Scrolling Logs

* Update button text

--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -5354,3 +5354,14 @@ input.form-control {
 .tippy-box[data-placement^='right'] > .tippy-arrow::before {
     border-right-color:var(--side-nav-bg-color-regular);
 }
+
+#error-popup .fas{
+    font-size: 16px;
+    margin-right: 5px;
+}
+
+#okay-button{
+    background: var(--component-bg-color);
+    color: var(--component-text-color) !important;
+    width: 100px;
+}
