--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -2139,6 +2139,67 @@ div.dts div.dataTables_scrollBody table {
     border: 2px solid red !important; /* Adjust border style as needed */
     background-color: rgb(252, 234, 234) !important;
 }
+.addrulepopupOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* semi-transparent black background */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+  
+  .addrulepopupContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 300px;
+  }
+  
+  .header {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 1.5em;
+  }
+  
+  label {
+    display: block;
+    margin-bottom: 10px;
+    text-align: left;
+  }
+  
+  input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+  }
+  
+  #addrule-cancel-btn {
+    background: var(--btn-regular-bg-color); 
+    color: #fff;
+    margin-right: 10px;
+  }
+  
+  #addrule-save-btn {
+    background: #A9A9A9; /* similar gray color as in the image */
+    color: #fff;
+  }
+  
 
 .metrics-dropdown-toggle{
     cursor:pointer;
